--- a/manage-client.html
+++ b/manage-client.html
@@ -30,7 +30,7 @@
                 <div class="avatar">
                     <i class="fa-solid fa-user"></i>
                 </div>
-                <span>Admin</span>
+                <span>Mr.Nghĩa</span>
             </div>
         </div>
     </header>
@@ -83,7 +83,7 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>Nguyễn Văn Lộc</td>
+                    <td>Nguyễn Trung Nghĩa</td>
                     <td class="table_inner-img">
                         <img class="avarta" src="../img/avarta-man.png" alt="" srcset="">
                     </td>
