--- a/manage-order.html
+++ b/manage-order.html
@@ -30,7 +30,7 @@
                 <div class="avatar">
                     <i class="fa-solid fa-user"></i>
                 </div>
-                <span>Admin</span>
+                <span>Mr.Nghĩa</span>
             </div>
         </div>
     </header>
@@ -141,7 +141,7 @@
                     <td>1</td>
                     <td>Nguyễn Trung Nghĩa</td>
                     <td>11/01/2024</td>
-                    <td>2.000.000 VND</td>
+                    <td>40.000.000 VND</td>
                     <td>
                         <div class="badge badge-success">Giao thành công</div>
                     </td>
@@ -154,9 +154,9 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Nguyễn Văn B</td>
-                    <td>23/01/2023</td>
-                    <td>1.000.000 VND</td>
+                    <td>Nguyễn Văn Lộc </td>
+                    <td>23/01/2024</td>
+                    <td>10.000.000 VND</td>
                     <td>
                         <div class="badge badge-danger">Đã hủy</div>
                     </td>
@@ -169,9 +169,9 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>Nguyễn Văn C</td>
-                    <td>20/01/2023</td>
-                    <td>2.500.000 VND</td>
+                    <td>Nguyễn Văn Yến</td>
+                    <td>20/01/2024</td>
+                    <td>25.000.000 VND</td>
                     <td>
                         <div class="badge badge-secondary"> Chưa xử lý</div>
                     </td>
@@ -184,9 +184,9 @@
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>Nguyễn Văn D</td>
-                    <td>20/01/2023</td>
-                    <td>2.000.000 VND</td>
+                    <td>Nguyễn Văn MInh</td>
+                    <td>20/01/2024</td>
+                    <td>20.000.000 VND</td>
                     <td>
                         <div class="badge badge-info">Đã xác nhận</div>
                     </td>
@@ -199,9 +199,9 @@
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td>Nguyễn Văn A</td>
-                    <td>20/01/2023</td>
-                    <td>400.000 VND</td>
+                    <td>Nguyễn Thu Anh</td>
+                    <td>20/01/2024</td>
+                    <td>40.000.000 VND</td>
                     <td>
                         <div class="badge badge-success">Giao thành công</div>
                     </td>
@@ -214,9 +214,9 @@
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td>Nguyễn Văn B</td>
-                    <td>23/01/2023</td>
-                    <td>3.000.000 VND</td>
+                    <td>Nguyễn Văn Nhi</td>
+                    <td>23/01/2024</td>
+                    <td>3o.000.000 VND</td>
                     <td>
                         <div class="badge badge-danger">Đã hủy</div>
                     </td>
@@ -229,9 +229,9 @@
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td>Nguyễn Văn C</td>
-                    <td>20/01/2023</td>
-                    <td>2.500.000 VND</td>
+                    <td>Nguyễn Tuấn Tú</td>
+                    <td>20/01/2024</td>
+                    <td>20.000.000 VND</td>
                     <td>
                         <div class="badge badge-secondary"> Chưa xử lý</div>
                     </td>
@@ -244,9 +244,9 @@
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td>Nguyễn Văn D</td>
-                    <td>20/01/2023</td>
-                    <td>2.000.000 VND</td>
+                    <td>Nguyễn Văn Linh</td>
+                    <td>20/01/2024</td>
+                    <td>20.000.000 VND</td>
                     <td>
                         <div class="badge badge-info">Đã xác nhận</div>
                     </td>
@@ -259,9 +259,9 @@
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td>Nguyễn Văn E</td>
-                    <td>20/01/2023</td>
-                    <td>2.000.000 VND</td>
+                    <td>Nguyễn Văn Mai</td>
+                    <td>20/01/2024</td>
+                    <td>20.000.000 VND</td>
                     <td>
                         <div class="badge badge-info">Đã xác nhận</div>
                     </td>
@@ -274,9 +274,9 @@
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td>Nguyễn Văn F</td>
-                    <td>20/01/2023</td>
-                    <td>2.000.000 VND</td>
+                    <td>Nguyễn Văn Phương</td>
+                    <td>20/01/2024</td>
+                    <td>20.000.000 VND</td>
                     <td>
                         <div class="badge badge-info">Đã xác nhận</div>
                     </td>
