--- a/manage-product.html
+++ b/manage-product.html
@@ -30,7 +30,7 @@
                 <div class="avatar">
                     <i class="fa-solid fa-user"></i>
                 </div>
-                <span>Admin</span>
+                <span>Mr.Nghĩa</span>
             </div>
         </div>
     </header>
